--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ __pycache__/
 
 # Starting telegram bot script with environment variables
 script_tg
+
+# SQL queries for adding existing clients
+sql_queries
