--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     container_name: tgbot-container
     restart: unless-stopped
     env_file:
-      - .env
+      - .confs/.data/.env
     ports:
       - 80:80
 #      - 443:443
@@ -30,12 +30,14 @@ services:
         ADDITIONAL_LANGUAGE: ${ADDITIONAL_LANGUAGE}
     container_name: postgres-container
     restart: unless-stopped
-    environment:
-      TZ: ${TZ}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_INITDB_ARGS: ${POSTGRES_INITDB_ARGS}
+    env_file:
+      - .confs/.data/.env
+    # environment:
+    #   TZ: ${TZ}
+    #   POSTGRES_USER: ${POSTGRES_USER}
+    #   POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    #   POSTGRES_DB: ${POSTGRES_DB}
+    #   POSTGRES_INITDB_ARGS: ${POSTGRES_INITDB_ARGS}
     ports:
       - 5432:5432
     healthcheck:
@@ -48,7 +50,7 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
       - db-backups:/var/lib/postgresql/backups
-      - ./init-database.sql:/docker-entrypoint-initdb.d/init-database.sql
+      - .confs/.data/init-database.sql:/docker-entrypoint-initdb.d/init-database.sql
 
 networks:
   appnet:
