--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ __pycache__/
 # Wireguard configurations folder
 .confs/
 
+# Environment
+.venv
+
 # Starting telegram bot script with environment variables
 script_tg
 
