--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# postgres container environment variables (are also used in src.database.postgres_dbms to initialize connection)
+# PostgreSQL container environment variables (are also used in src.database.postgres_dbms to initialize connection)
 TZ=Europe/Moscow                                                # ! set up your db timezone
 POSTGRES_USER=docker                                            # you can specify any postgres username, but this one is preferable
 POSTGRES_PASSWORD=XXXXXXXXXXXXXXXXX...                          # ! set up your secret password
@@ -9,7 +9,7 @@ POSTGRES_INITDB_ARGS=--locale=en_US.UTF-8 --lc-time=ru_RU.UTF-8 # ! set up dbms 
 ADDITIONAL_LANGUAGE=ru_RU                                       # ! set up additional country-language to be installed in postgres container.
                                                                 # SHOULD BE THE SAME AS xx_XX IN --lc-time OPTION (you need to install language for using it)
 
-# tgbot container environment variables
+# TGbot container environment variables
 ADMIN_ID=000000000                                              # ! set up your admin telegram id
 BOT_TOKEN=0000000000:XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX        # ! set up your bot token
 YOOMONEY_TOKEN=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX... # ! set your yoomoney token (can be obtained using yoomoney-api: https://github.com/AlekseyKorshuk/yoomoney-api?tab=readme-ov-file#access-token)
@@ -17,3 +17,8 @@ YOOMONEY_ACCOUNT_NUMBER=000000000000000                         # ! set up your 
 BACKUP_PATH=/usr/src/tgbot/backups                              # you can specify other backup directory, but this one is preferable
 LOCALIZATION_LANGUAGE=en                                        # ! set up your localization language
                                                                 # (should be the same as file name of *.json in localization folder)
+
+# Ports for docker ports mapping
+BOT_HTTP_PORT=8100
+BOT_HTTPS_PORT=4430
+POSTGRES_PORT=56565
