ops: update dotenv

--- a/.env
+++ b/.env
@@ -1,24 +1,46 @@
-# PostgreSQL container environment variables (are also used in src.database.postgres_dbms to initialize connection)
-TZ=Europe/Moscow                                                # ! set up your db timezone
-POSTGRES_USER=docker                                            # you can specify any postgres username, but this one is preferable
-POSTGRES_PASSWORD=XXXXXXXXXXXXXXXXX...                          # ! set up your secret password
-POSTGRES_DB=tgbot-postgres-db                                   # you can specify any postgres database name, but this one is preferable
-POSTGRES_INITDB_ARGS=--locale=en_US.UTF-8 --lc-time=ru_RU.UTF-8 # ! set up dbms country-language, where locale is global language and lc-time is dates
-                                                                # and times formatting language. See more in documentation:
-                                                                # https://www.postgresql.org/docs/current/locale.html
-ADDITIONAL_LANGUAGE=ru_RU                                       # ! set up additional country-language to be installed in postgres container.
-                                                                # SHOULD BE THE SAME AS xx_XX IN --lc-time OPTION (you need to install language for using it)
+########## PostgreSQL container environment variables ##########
+# ! Set your db timezone
+TZ=Europe/Moscow
 
-# TGbot container environment variables
-ADMIN_ID=000000000                                              # ! set up your admin telegram id
-BOT_TOKEN=0000000000:XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX        # ! set up your bot token
-YOOMONEY_TOKEN=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX... # ! set your yoomoney token (can be obtained using yoomoney-api: https://github.com/AlekseyKorshuk/yoomoney-api?tab=readme-ov-file#access-token)
-YOOMONEY_ACCOUNT_NUMBER=000000000000000                         # ! set up your yoomoney account number
-BACKUP_PATH=/usr/src/tgbot/backups                              # you can specify other backup directory, but this one is preferable
-LOCALIZATION_LANGUAGE=en                                        # ! set up your localization language
-                                                                # (should be the same as file name of *.json in localization folder)
+# Specify any postgres username, but this one is preferable
+POSTGRES_USER=docker
 
-# Ports for docker ports mapping
+# ! Set your secret password
+POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-XXXXXXXXXXXXXXXXX...}
+
+# Specify any postgres database name, but this one is preferable
+POSTGRES_DB=tgbot-postgres-db
+
+# ! Set dbms country-language, where locale is global language and lc-time is dates
+# and times formatting language. See more in documentation:
+# https://www.postgresql.org/docs/current/locale.html
+POSTGRES_INITDB_ARGS=--locale=en_US.UTF-8 --lc-time=ru_RU.UTF-8 
+
+# ! Set additional country-language to be installed in postgres container.
+# HAVE TO BE THE SAME AS xx_XX IN --lc-time OPTION (you need to install language for using it)
+ADDITIONAL_LANGUAGE=ru_RU
+
+########## Telegram bot container environment variables ##########
+# ! Set your admin telegram id
+ADMIN_ID=${ADMIN_ID:-000000000}
+
+# ! Set your bot token
+BOT_TOKEN=${BOT_TOKEN:-0000000000:XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX}
+
+# ! Set your Yoomoney token (can be obtained using yoomoney-api: https://github.com/AlekseyKorshuk/yoomoney-api?tab=readme-ov-file#access-token)
+YOOMONEY_TOKEN=${YOOMONEY_TOKEN:-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX...}
+
+# ! Set up your Yoomoney account number
+YOOMONEY_ACCOUNT_NUMBER=${YOOMONEY_ACCOUNT_NUMBER:-000000000000000}
+
+# Specify backup directory, but this one is preferable
+BACKUP_PATH=/usr/src/tgbot/backups
+
+# ! Set up your localization language
+# (have to be the same as file name of *.json in localization folder)
+LOCALIZATION_LANGUAGE=en
+
+########## Ports for docker ports mapping ##########
 BOT_HTTP_PORT=8100
 BOT_HTTPS_PORT=4430
 POSTGRES_PORT=56565
