--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ POSTGRES_DB=tgbot-postgres-db
 # ! Set dbms country-language, where locale is global language and lc-time is dates
 # and times formatting language. See more in documentation:
 # https://www.postgresql.org/docs/current/locale.html
-POSTGRES_INITDB_ARGS=--locale=en_US.UTF-8 --lc-time=ru_RU.UTF-8 
+POSTGRES_INITDB_ARGS="--locale=en_US.UTF-8 --lc-time=ru_RU.UTF-8 "
 
 # ! Set additional country-language to be installed in postgres container.
 # HAVE TO BE THE SAME AS xx_XX IN --lc-time OPTION (you need to install language for using it)
