--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: ./build/bot/Dockerfile
     image: exmanka/ksivpn-telegram-bot:${TAG:-latest}
-    container_name: tgbot
+    container_name: ksivpn-tgbot
     restart: unless-stopped
     env_file:
       - .env
@@ -25,7 +25,7 @@ services:
       args:
         ADDITIONAL_LANGUAGE: ${ADDITIONAL_LANGUAGE}
     image: exmanka/ksivpn-telegram-bot-postgres:${TAG:-latest}
-    container_name: tgbot-postgres
+    container_name: ksivpn-tgbot-postgres
     restart: unless-stopped
     environment:
       TZ: ${TZ}
