ops: update dotenv

--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ ADDITIONAL_LANGUAGE=${ADDITIONAL_LANGUAGE:-"ru_RU"}
 
 #################### Telegram bot container environment variables ####################
 # [!] Set your admin telegram id
-ADMIN_ID=${ADMIN_ID:-"000000000"}
+ADMIN_ID=${ADMIN_ID:-000000000}
 
 # [!] Set your bot token
 BOT_TOKEN=${BOT_TOKEN:-"0000000000:XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"}
@@ -43,9 +43,9 @@ LOCALIZATION_LANGUAGE=${LOCALIZATION_LANGUAGE:-"en"}
 
 #################### Ports for Docker ports mapping ####################
 # Specify Docker Host Machine ports used for port mapping
-BOT_HTTP_PORT=${BOT_HTTP_PORT:-"8080"}
-BOT_HTTPS_PORT=${BOT_HTTPS_PORT:-"443"}
-POSTGRES_PORT=${POSTGRES_PORT:-"5432"}
+BOT_HTTP_PORT=${BOT_HTTP_PORT:-8080}
+BOT_HTTPS_PORT=${BOT_HTTPS_PORT:-443}
+POSTGRES_PORT=${POSTGRES_PORT:-5432}
 
 #################### Docker Images tags ####################
 TAG=${TAG:-"latest"}
