ops: update dotenv

--- a/.env
+++ b/.env
@@ -48,4 +48,4 @@ BOT_HTTPS_PORT=${BOT_HTTPS_PORT:-443}
 POSTGRES_PORT=${POSTGRES_PORT:-5432}
 
 #################### Docker Images tags ####################
-TAG=${TAG:-"latest"}
+TAG=${TAG:-latest}
