ups: update dotenv

--- a/.env
+++ b/.env
@@ -1,45 +1,45 @@
 #################### PostgreSQL container environment variables ####################
 # [!] Set your db timezone
-TZ=${TZ:-"Europe/Moscow"}
+TZ=${TZ:-Europe/Moscow}
 
 # Specify any postgres username, but this one is preferable
-POSTGRES_USER=${POSTGRES_USER:-"docker"}
+POSTGRES_USER=${POSTGRES_USER:-docker}
 
 # [!] Set your secret password 
-POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-"XXXXXXXXXXXXXXXXX..."}
+POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-XXXXXXXXXXXXXXXXX...}
 
 # Specify any postgres database name, but this one is preferable
-POSTGRES_DB=${POSTGRES_DB:-"ksivpn-tgbot-postgres-db"}
+POSTGRES_DB=${POSTGRES_DB:-ksivpn-tgbot-postgres-db}
 
 # [!] Set dbms country-language, where locale is global language and lc-time is dates
 # and times formatting language.
 # See more in documentation: https://www.postgresql.org/docs/current/locale.html
-POSTGRES_INITDB_ARGS=${POSTGRES_INITDB_ARGS:-"--locale=en_US.UTF-8 --lc-time=ru_RU.UTF-8"}
+POSTGRES_INITDB_ARGS=${POSTGRES_INITDB_ARGS:---locale=en_US.UTF-8 --lc-time=ru_RU.UTF-8}
 
 # [!] Set additional country-language to be installed in postgres container.
 # HAVE TO BE THE SAME AS xx_XX IN --lc-time OPTION (you need to install language for using it)
-ADDITIONAL_LANGUAGE=${ADDITIONAL_LANGUAGE:-"ru_RU"}
+ADDITIONAL_LANGUAGE=${ADDITIONAL_LANGUAGE:-ru_RU}
 
 #################### Telegram bot container environment variables ####################
 # [!] Set your admin telegram id
 ADMIN_ID=${ADMIN_ID:-000000000}
 
 # [!] Set your bot token
-BOT_TOKEN=${BOT_TOKEN:-"0000000000:XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"}
+BOT_TOKEN=${BOT_TOKEN:-0000000000:XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX}
 
 # [!] Set your Yoomoney token (can be obtained using yoomoney-api:
 # https://github.com/AlekseyKorshuk/yoomoney-api?tab=readme-ov-file#access-token)
-YOOMONEY_TOKEN=${YOOMONEY_TOKEN:-"XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX..."}
+YOOMONEY_TOKEN=${YOOMONEY_TOKEN:-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX...}
 
 # [!] Set your Yoomoney account number
-YOOMONEY_ACCOUNT_NUMBER=${YOOMONEY_ACCOUNT_NUMBER:-"000000000000000"}
+YOOMONEY_ACCOUNT_NUMBER=${YOOMONEY_ACCOUNT_NUMBER:-000000000000000}
 
 # Specify backup directory, but this one is preferable
-BACKUP_PATH=${BACKUP_PATH:-"/usr/src/tgbot/backups"}
+BACKUP_PATH=${BACKUP_PATH:-/usr/src/tgbot/backups}
 
 # [!] Set your localization language
 # (have to be the same as file name of *.json in localization folder)
-LOCALIZATION_LANGUAGE=${LOCALIZATION_LANGUAGE:-"en"}
+LOCALIZATION_LANGUAGE=${LOCALIZATION_LANGUAGE:-en}
 
 #################### Ports for Docker ports mapping ####################
 # Specify Docker Host Machine ports used for port mapping
