--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ POSTGRES_USER=${POSTGRES_USER:-docker}
 POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-XXXXXXXXXXXXXXXXX...}
 
 # Specify any postgres database name, but this one is preferable
-POSTGRES_DB=${POSTGRES_DB:-ksivpn-tgbot-postgres-db}
+POSTGRES_DB=${POSTGRES_DB:-ksivpn}
 
 # [!] Set dbms country-language, where locale is global language and lc-time is dates
 # and times formatting language.
@@ -43,8 +43,6 @@ LOCALIZATION_LANGUAGE=${LOCALIZATION_LANGUAGE:-en}
 
 #################### Ports for Docker ports mapping ####################
 # Specify Docker Host Machine ports used for port mapping
-BOT_HTTP_PORT=${BOT_HTTP_PORT:-8080}
-BOT_HTTPS_PORT=${BOT_HTTPS_PORT:-8443}
 POSTGRES_PORT=${POSTGRES_PORT:-54320}
 
 #################### Docker Images tags ####################
