ops(dotenv): update default values

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ POSTGRES_DB=${POSTGRES_DB:-ksivpn}
 # [!] Set dbms country-language, where locale is global language and lc-time is dates
 # and times formatting language.
 # See more in documentation: https://www.postgresql.org/docs/current/locale.html
-POSTGRES_INITDB_ARGS=${POSTGRES_INITDB_ARGS:-'--locale=en_US.UTF-8 --lc-time=ru_RU.UTF-8'}
+POSTGRES_INITDB_ARGS=${POSTGRES_INITDB_ARGS:---locale=en_US.UTF-8 --lc-time=ru_RU.UTF-8}
 
 # [!] Set additional country-language to be installed in postgres container.
 # HAVE TO BE THE SAME AS xx_XX IN --lc-time OPTION (you need to install language for using it)
@@ -46,4 +46,4 @@ LOCALIZATION_LANGUAGE=${LOCALIZATION_LANGUAGE:-en}
 POSTGRES_PORT=${POSTGRES_PORT:-54320}
 
 #################### Docker Images tags ####################
-TAG=${TAG:-latest}
+TAG=${TAG:-local}
