--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,12 +8,9 @@ services:
     image: exmanka/ksivpn-telegram-bot:${TAG}
     container_name: ksivpn-tgbot
     restart: unless-stopped
-    env_file:
-      - .env
-    networks:
-      - ksivpn-net
-    volumes:
-      - ksivpn-tgbot-postgres-backups:${BACKUP_PATH}
+    env_file: [ .env ]
+    networks: [ ksivpn-net ]
+    volumes: [ "ksivpn-tgbot-postgres-backups:${BACKUP_PATH}" ]
     depends_on:
       ksivpn-tgbot-postgres:
         condition: service_healthy
@@ -32,15 +29,13 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_INITDB_ARGS: ${POSTGRES_INITDB_ARGS}
-    ports:
-      - ${POSTGRES_PORT}:5432
+    ports: [ ${POSTGRES_PORT}:5432 ]
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
-    networks:
-      - ksivpn-net
+    networks: [ ksivpn-net ]
     volumes:
       - ksivpn-tgbot-postgres-data:/var/lib/postgresql/data
       - ksivpn-tgbot-postgres-backups:/var/lib/postgresql/backups
